# NVML_test

./: CMakeLists.txt  README.md  build.sh  compile_simple.sh  main.cpp  mig_info.cpp  nvml_accounting.cpp  nvml_field_queries.cpp  nvml_manager.cpp  nvml_manager.h  nvml_mig  nvml_mig.cpp  nvml_mig.h  nvml_mig_optimal.cpp  nvml_mig_optimal.h  nvml_types.h
